# blindspot_ubsttp

./: README.md  ROADMAP.md  docker-compose.yml
backend/: Dockerfile  requirements.txt
backend/app/: config.py  db.py
backend/app/data/: bias_research.py
backend/app/routers/: auth.py  debrief.py  decisions.py  sessions.py
backend/app/services/: analysis.py  narrative.py  profile_generator.py  reveal.py  scenario_engine.py
backend/tests/: test_analysis.py  test_profile_generator.py  test_scenario_engine.py  test_verdict_calibration.py
blindspot/: .env.example  .gitignore  LICENSE
blindspot/backend/: pyproject.toml
blindspot/backend/app/: __init__.py  auth.py  config.py  main.py  models.py  schemas.py
blindspot/backend/app/data/: bias_research.py
blindspot/backend/app/services/: analysis.py  scenario_engine.py
blindspot/backend/tests/: test_analysis.py  test_e2e.py  test_profile_generator.py  test_scenario_engine.py  test_verdict_calibration.py
blindspot/docs/: architecture.md
blindspot/frontend/: index.html  package.json  tsconfig.tsbuildinfo
blindspot/frontend/src/: App.tsx  styles.css
blindspot/frontend/src/components/: CandidateCard.tsx  Layout.tsx  ProgressBar.tsx
docs/: architecture.md
frontend/: package-lock.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/src/components/: Button.tsx
frontend/src/lib/: api.ts
frontend/src/pages/: DebriefPage.tsx  HistoryPage.tsx  HomePage.tsx  LoginPage.tsx
frontend/src/scenes/: InboxTriage.test.tsx  InboxTriage.tsx  PerformanceCalibration.tsx  PromotionRanking.tsx
(+5 files in other folders)
